[gd_scene load_steps=3 format=2]

[ext_resource path="res://CardRT.gd" type="Script" id=1]
[ext_resource path="res://CardSet.gd" type="Script" id=2]

[node name="CardSet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DB" type="ItemList" parent="HBox"]
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardRT" type="RichTextLabel" parent="HBox"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 600.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="HBox"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="menu" type="HBoxContainer" parent="HBox/VBox"]
margin_right = 339.0
margin_bottom = 31.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HBox/VBox/menu"]
margin_right = 288.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "default"

[node name="new" type="Button" parent="HBox/VBox/menu"]
margin_left = 292.0
margin_right = 312.0
margin_bottom = 31.0
text = "+"

[node name="del" type="Button" parent="HBox/VBox/menu"]
margin_left = 316.0
margin_right = 339.0
margin_bottom = 31.0
text = "X"

[node name="DeckList" type="ItemList" parent="HBox/VBox"]
margin_top = 35.0
margin_right = 339.0
margin_bottom = 169.0
size_flags_vertical = 3

[node name="DeckCnt" type="Label" parent="HBox/VBox"]
margin_top = 173.0
margin_right = 339.0
margin_bottom = 194.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" type="ItemList" parent="HBox/VBox"]
margin_top = 198.0
margin_right = 339.0
margin_bottom = 600.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -40.0
margin_right = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="menu"]
margin_right = 52.0
margin_bottom = 40.0
text = "Clear"

[node name="Sort" type="Button" parent="menu"]
margin_left = 56.0
margin_right = 100.0
margin_bottom = 40.0
text = "Sort"

[node name="Save" type="Button" parent="menu"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 40.0
text = "Save"

[node name="Load" type="Button" parent="menu"]
margin_left = 156.0
margin_right = 207.0
margin_bottom = 40.0
text = "Load"

[node name="OK" type="Button" parent="menu"]
margin_left = 211.0
margin_right = 248.0
margin_bottom = 40.0
text = "OK"
[connection signal="item_activated" from="HBox/DB" to="." method="_on_DB_item_activated"]
[connection signal="item_selected" from="HBox/DB" to="." method="_on_DB_item_selected"]
[connection signal="text_changed" from="HBox/VBox/menu/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="HBox/VBox/menu/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="HBox/VBox/menu/del" to="." method="_on_del_pressed"]
[connection signal="item_selected" from="HBox/VBox/DeckList" to="." method="_on_DeckList_item_selected"]
[connection signal="item_activated" from="HBox/VBox/Deck" to="." method="_on_Deck_item_activated"]
[connection signal="item_selected" from="HBox/VBox/Deck" to="." method="_on_Deck_item_selected"]
[connection signal="pressed" from="menu/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="menu/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="menu/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="menu/OK" to="." method="_on_OK_pressed"]
